# GenAI-Powered-Predictive-Maintenance-System-with-MCP

./: README.md  claude_desktop_config_PYTHON_VENV.json  pyproject.toml  pytest.ini  setup_claude.ps1  setup_venv.py  validate_server.py
data/: README.md
data/signals/: test_accel_signal.csv
data/signals/real_test/: InnerRaceFault_vload_6.csv  InnerRaceFault_vload_7.csv  OuterRaceFault_vload_6.csv  OuterRaceFault_vload_6_metadata.json  OuterRaceFault_vload_7.csv  OuterRaceFault_vload_7_metadata.json
data/signals/real_train/: InnerRaceFault_vload_1.csv  InnerRaceFault_vload_1_metadata.json  InnerRaceFault_vload_2.csv  InnerRaceFault_vload_2_metadata.json  InnerRaceFault_vload_3.csv  InnerRaceFault_vload_4.csv  InnerRaceFault_vload_4_metadata.json  InnerRaceFault_vload_5.csv  OuterRaceFault_vload_1.csv  OuterRaceFault_vload_1_metadata.json  OuterRaceFault_vload_2.csv  OuterRaceFault_vload_3.csv  OuterRaceFault_vload_3_metadata.json  OuterRaceFault_vload_4.csv  OuterRaceFault_vload_5.csv  OuterRaceFault_vload_5_metadata.json  baseline_1_metadata.json
models/: .gitkeep
reports/: envelope_analysis_real_train_OuterRaceFault_1.html  fft_spectrum_real_train_baseline_1.html  iso_20816_real_train_baseline_1.html
resources/bearing_catalogs/: .gitkeep  README.md  common_bearings_catalog.json
resources/cache/: .gitkeep  test_pump_manual_extraction.json
resources/datasheets/: .gitkeep
resources/machine_manuals/: .gitkeep  README.md  test_pump_manual.txt
src/: __init__.py  document_reader.py  html_templates.py  machinery_diagnostics_server.py  report_generator.py
tests/: README.md  conftest.py  test_envelope_iso.py  test_fft_analysis.py  test_ml_tools.py  test_obsolete_tools_removed.py  test_real_data.py  test_reports.py  test_suite.py  test_unit_conversion.py  verify.py
tests/data/signals/: test_sine_50Hz.csv
